[package]
name = "shen_transpiler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Shen to Rust transpiler"
license = "MIT"

[dependencies]
nom = "7.1.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
